# nl3d-2017

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  conv.py  nlink.py  nlview.py
cython-src/: CMakeLists.txt  CXX_SatSolver.pxd  literal.pxi  pym_sat.pyx  satsolver.pxi  varid.pxi
data/: NL_Q01.txt  NL_Q02.txt  NL_Q04.txt  NL_Q05.txt  NL_Q06.txt  NL_Q10.txt  NL_Q13.txt  NL_Q14.txt  NL_Q15.txt  NL_Q16.txt  NL_Q18.txt  NL_Q20.txt  NL_Q23.txt  NL_Q25.txt  NL_Q28.txt  NL_Q30.txt  NL_Q31.txt
data/adc2015/: Q01.txt  Q02.txt  Q03.txt  Q04.txt  Q05.txt  Q06.txt  Q07.txt  Q08.txt  Q09.txt  Q10.txt  Q11.txt  Q12.txt  Q13.txt  Q14.txt  Q15.txt  Q16.txt  Q17.txt  Q19.txt  Q20.txt  Q21.txt  Q22.txt  Q23.txt  Q24.txt  Q25.txt  Q26.txt  Q27.txt  Q28.txt  Q29.txt  Q30.txt  Q31.txt  Q32.txt  Q33.txt  Q34.txt  Q35.txt  Q36.txt
data/adc2015_3D/: Q01.txt  Q02.txt  Q03.txt  Q04.txt  Q05.txt  Q06.txt  Q07.txt  Q08.txt  Q09.txt  Q10.txt  Q11.txt  Q12.txt  Q13.txt  Q14.txt  Q15.txt  Q16.txt  Q17.txt  Q18.txt  Q20.txt  Q21.txt  Q22.txt  Q23.txt  Q24.txt  Q25.txt  Q26.txt  Q27.txt  Q28.txt  Q29.txt  Q30.txt  Q31.txt  Q32.txt  Q33.txt  Q34.txt  Q35.txt  Q36.txt
data/adc2016/: Q01.txt  Q02.txt  Q03.txt  Q04.txt  Q05.txt  Q06.txt  Q07.txt  Q08.txt  Q10.txt  Q11.txt  Q12.txt  Q13.txt  Q14.txt  Q15.txt  Q16.txt  Q17.txt  Q18.txt  Q19.txt  Q20.txt  Q21.txt  Q22.txt  Q23.txt  Q24.txt  Q25.txt  Q26.txt  Q27.txt  Q28.txt  Q29.txt  Q30.txt  Q31.txt
data/adc2016_NOVIA/: NL_Q03.txt  NL_Q08.txt  NL_Q11.txt  NL_Q12.txt  NL_Q17.txt  NL_Q26.txt  NL_Q29.txt  Q07.txt  Q19.txt  Q21.txt  Q22.txt  Q24.txt  Q27.txt
data/adc2017/: Q01.txt  Q02.txt  Q03.txt  Q04.txt  Q05.txt  Q06.txt  Q07.txt  Q08.txt  Q09.txt  Q10.txt  Q11.txt  Q12.txt  Q13.txt  Q14.txt  Q15.txt  Q16.txt  Q17.txt  Q18.txt  Q19.txt  Q20.txt  Q21.txt  Q22.txt  Q23.txt  Q24.txt  Q25.txt  Q26.txt  Q27.txt  Q28.txt  Q29.txt  Q30.txt  Q31.txt  Q32.txt  Q33.txt  Q34.txt
doxygen-src/: CMakeLists.txt  Doxyfile.in
etc/: version_config.h.in
nl3d/: __init__.py  adc2017_reader.py  adc_reader.py  dimension.py  graph.py  nlcnfencoder.py  nlgraph.py  nlpoint.py  nlproblem.py  nlrouter.py  nlsolution.py  nlsolver.py  point.py  problem.py  router.py  solution.py  via.py
nl3d/gui/: __init__.py  viewmgr.py  viewwidget.py
nl3d/sat/: __init__.py  satbool3.py  satsolver.py  satsolver_tmpl.py
nl3d/v2015/: __init__.py  cnfencoder.py  graph.py  solve_nlink.py
nl3d/v2016/: __init__.py  adc2016_reader.py  cnfencoder.py  graph.py  nlcnfencoder.py  nlpoint.py  nlproblem.py  nlsolver.py  nlvia.py  solve_nlink.py
nl3d/v2017/: __init__.py  adc2017_reader.py  cnfencoder.py  dimension.py  graph.py  point.py  problem.py  router.py  solution.py  solve_nlink.py
nl3d/v2017/gui/: nlviewmgr.py  nlviewwidget.py
